Wrap privacy/terms view with 'whitelisted' locale

--- a/app/views/pages/privacy.html.haml
+++ b/app/views/pages/privacy.html.haml
@@ -1,4 +1,6 @@
-- @title = t("users.privacy.policy", youversion: t("youversion"))
+- t = Proc.new do |key, options={}| 
+  - I18n.t(key, options.merge(:locale => @locale))
+- @title = t.call("users.privacy.policy", youversion: t.call("youversion"))
 - @sidebar = false
 
 / attach bdc stylesheet for better mobile styling for now (kill me)
@@ -8,45 +10,45 @@
     = stylesheet_link_tag "bdc_home"
 
 %article
-  %h1= t("users.privacy.policy", youversion: t("youversion"))
-  %h4.mute= t("users.revised date", date: "7/16/2012")
+  %h1= t.call("users.privacy.policy", youversion: t.call("youversion"))
+  %h4.mute= t.call("users.revised date", date: "7/16/2012")
   %hr
   - if I18n.locale != I18n.default_locale
-    %p.disclaimer= t('users.privacy.translation disclaimer')
+    %p.disclaimer= t.call('users.privacy.translation disclaimer')
     %hr
 
-  %p= t("users.privacy.intro")
+  %p= t.call("users.privacy.intro")
 
-  %h4= t("users.privacy.what we collect")
+  %h4= t.call("users.privacy.what we collect")
   %ul
     %li
-      %h5= t("users.privacy.your information title")
-      %p= t("users.privacy.your information text")
+      %h5= t.call("users.privacy.your information title")
+      %p= t.call("users.privacy.your information text")
     %li
-      %h5= t("users.privacy.device id title")
-      %p= t("users.privacy.device id text")
+      %h5= t.call("users.privacy.device id title")
+      %p= t.call("users.privacy.device id text")
     %li
-      %h5= t("users.privacy.cookies title")
-      %p= t("users.privacy.cookies text", link: link_to("www.youversion.com", "http://www.youversion.com")).html_safe
+      %h5= t.call("users.privacy.cookies title")
+      %p= t.call("users.privacy.cookies text", link: link_to("www.youversion.com", "http://www.youversion.com")).html_safe
     %li
-      %h5= t("users.privacy.log title")
-      %p= t("users.privacy.log text")
+      %h5= t.call("users.privacy.log title")
+      %p= t.call("users.privacy.log text")
     %li
-      %h5= t("users.privacy.communications title")
-      %p= t("users.privacy.communications text", link: link_to("www.youversion.com/live", "http://www.youversion.com/live")).html_safe
+      %h5= t.call("users.privacy.communications title")
+      %p= t.call("users.privacy.communications text", link: link_to("www.youversion.com/live", "http://www.youversion.com/live")).html_safe
     %li
-      %h5= t("users.privacy.third party title")
-      %p= t("users.privacy.third party text")
-  %h4= t("users.privacy.information use title")
-  %p= t("users.privacy.information use text")
-  %h4= t("users.privacy.information security title")
-  %p= t("users.privacy.information security text")
-  %h4= t("users.privacy.data integrity title")
-  %p= t("users.privacy.data integrity text")
-  %h4= t("users.privacy.information access title")
-  %p= t("users.privacy.information access text")
-  %h4= t("users.privacy.enforcement title")
-  %p= t("users.privacy.enforcement text")
-  %h4= t("users.privacy.questions title")
-  %p= t("users.privacy.questions text", mailto_link: link_to("legal@youversion.com", "mailto:legal@youversion.com")).html_safe
+      %h5= t.call("users.privacy.third party title")
+      %p= t.call("users.privacy.third party text")
+  %h4= t.call("users.privacy.information use title")
+  %p= t.call("users.privacy.information use text")
+  %h4= t.call("users.privacy.information security title")
+  %p= t.call("users.privacy.information security text")
+  %h4= t.call("users.privacy.data integrity title")
+  %p= t.call("users.privacy.data integrity text")
+  %h4= t.call("users.privacy.information access title")
+  %p= t.call("users.privacy.information access text")
+  %h4= t.call("users.privacy.enforcement title")
+  %p= t.call("users.privacy.enforcement text")
+  %h4= t.call("users.privacy.questions title")
+  %p= t.call("users.privacy.questions text", mailto_link: link_to("legal@youversion.com", "mailto:legal@youversion.com")).html_safe
 
