i18n for API error message which are English only
* It's set up to pass in the API error as default when there is no i18n available, so at least it's a human readable string
* Currently, it's only enabled for change password, and creating any new record. Likely needs to be added everywhere we interface the API.

--- a/app/views/users/_create_form.html.haml
+++ b/app/views/users/_create_form.html.haml
@@ -1,10 +1,5 @@
 = form_for :user, url: sign_up_path do |f|
-  - if @user.errors.any?
-    .form_errors
-      =t("users.creation form errors")
-      %ul
-        - @user.errors[:base].each do |e|
-          %li= e
+  = render partial: "shared/form_errors", locals: {errors: @user.errors, heading: t("users.creation form errors")}
   %p
     = f.label :email, t("users.email address")
     %br
