removed The Bible series banner

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -349,6 +349,7 @@ p
 // ----------------------- Bible series promo ------------------------------------
 
 .bs-promo
+  display: none
   position: absolute
   top: 10px
   left: 62%
