--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,17 +12,17 @@
     = render '/shared/google_analytics'
 
     :javascript
+      var isMobile = {
+          BlackBerry: function() {
+              var ua = navigator.userAgent;
+              return (ua.indexOf("BlackBerry") >= 0) ? true : false;
+          } // you can add more tests here for other phones
+      };
+
       var ua = navigator.userAgent;
-      if (ua.indexOf("BlackBerry") >= 0) {
-          if (ua.indexOf("Version/") >= 0) { // ***User Agent in BlackBerry 6 and BlackBerry 7
-              Verposition = ua.indexOf("Version/") + 8;
-              TotLenght = ua.length;
-              document.write("BB OS Version :: " + ua.substring(Verposition, Verposition + 3));
-          }
-          else {// ***User Agent in BlackBerry Device Software 4.2 to 5.0
-              var SplitUA = ua.split("/");
-              document.write("BB OS Version :: " + SplitUA[1].substring(0, 3));
-          }
+      if( isMobile.BlackBerry() ) {
+          var SplitUA = ua.split("/");
+          document.write("BB OS Version :: " + SplitUA[1].substring(0, 3));
       }
 
   %body
