--- a/app/views/layouts/users.html.haml
+++ b/app/views/layouts/users.html.haml
@@ -19,10 +19,8 @@
 
   %article.profile
     - if @me
-      - if @selected == :recent_activity || @selected == :notes || @selected == :friends || @selected == :badges
-        - title = t("users.my #{@selected.to_s}")
-        %h1{class: @selected == :friends || @selected == :notes ? "float_left" : ""}= title
-
+      - if @selected == :recent_activity || @selected == :notes || @selected == :badges
+        %h1{class: @selected == :notes ? "float_left" : ""}= t("users.my #{@selected.to_s}")
       - else
         - title = t("users.edit #{@selected}")
         %h1= title
