Fix create note button margin

--- a/app/views/sidebars/notes/_default.html.haml
+++ b/app/views/sidebars/notes/_default.html.haml
@@ -1,6 +1,6 @@
 - content_for :sidebar do
   .widget.gutter_bottom_half
-    %a.action_button_green{href: current_auth ? new_note_path : sign_up_path(source:"note")}
+    %a.action_button_green{href: current_auth ? new_note_path : sign_up_path(source:"note"), style: "margin-bottom: 10px"}
       %span.icon_plus= t('new note')
     = render_cell :notes_list_widget, :display, notes: Note.all(language_iso: I18n.locale, cache_for: a_very_short_time), title: t("notes.community notes")
 
