--- a/app/views/notes/show.html.haml
+++ b/app/views/notes/show.html.haml
@@ -13,7 +13,8 @@
     %hr
     %p= raw(@note.content_html)
     %hr
-    = render partial: "shared/share_buttons"
+    - if @note.can_share?
+      = render partial: "shared/share_buttons"
     .float_right
       %p.small
         - if current_auth && (current_auth.user_id.to_i == @note.user_id.to_i)
