Add "Loading sidebar content" to i18n

--- a/app/views/sidebars/subscriptions/_display.html.haml
+++ b/app/views/sidebars/subscriptions/_display.html.haml
@@ -9,4 +9,4 @@
   #sb-subscription
     .ajax_me{"data-ajax" => url}
       .widget.widget-notice.widget_last_fixed{style: "width:268px;"}
-        %p Loading sidebar content
+        %p= t("plans.loading sidebar content")
