Integrating licensing flow into our current sign-up/sign-in pages, removing unnecessary distractions, etc.

--- a/app/assets/stylesheets/_wrapper_container.sass
+++ b/app/assets/stylesheets/_wrapper_container.sass
@@ -14,14 +14,17 @@
   // Sidebar width.
   padding-right: 310px
 
+#container.no_primary_nav
+  padding-left: 0
+
 #container.no_sidebar
   padding-right: 0
 
 #container.no_sidebar #main
   margin-right: 0
-  
+
 .mobile-add
   display: none
- 
+
 .mobile-remove
   display: inline-block
