--- a/app/views/users/_create_form.html.haml
+++ b/app/views/users/_create_form.html.haml
@@ -1,4 +1,4 @@
-= form_for :user, url: sign_up_path do |f|
+= form_for :user, url: sign_up_path(source: params[:source]) do |f|
   = render partial: "shared/form_errors", locals: {errors: @user.errors, heading: t("users.creation form errors")}
   %p
     = f.label :email, t("users.email address")
