--- a/app/assets/stylesheets/_form_elements.sass
+++ b/app/assets/stylesheets/_form_elements.sass
@@ -46,7 +46,7 @@ br + textarea
   background:
     repeat: no-repeat
     position: right bottom
-  border: 1px solid
+  border: 1px solid #e89494
   font-size: 16px
   opacity: 0.95
   text-shadow: #fff 0 1px 0
@@ -55,11 +55,17 @@ br + textarea
   +round
   +box-shadow(#fff 0 1px 0 0)
   margin-bottom: 20px
+
+  h4
+    font-weight: normal
+    margin-top: 4px
+
   ul
+    margin-left: 20px
     margin-bottom: 0
-    list-style: none
-    padding: 0
     li
+      padding-top: 0 !important
+      list-style: square !important
       background-image: none !important
       padding-left: 10px !important
 
