Fix notes list using wrong list_item partial

--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -23,7 +23,7 @@
     %h1= "#{@reference_title} #{t('notes.list title')}"
   - unless @notes.empty?
     %ul.big_list
-      = render partial: "list_item", collection: @notes, locals: {display: :avatar}
+      = render partial: "notes/list_item", collection: @notes, locals: {display: :avatar}
     = render "shared/pagination", resource_list: @notes
   - else
     %div{class: "none"}= t("notes.not found")
