fixed About page layout

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -807,6 +807,10 @@
         a
           margin-bottom: 30px
 
+  .about_content
+    padding-right: 0px
+    background: none
+
   // ----------------- Single verse page
 
   #header
