--- a/app/assets/stylesheets/_audio_player.sass
+++ b/app/assets/stylesheets/_audio_player.sass
@@ -68,14 +68,14 @@
     position: absolute
     top: 50%
     left: 50px
-    width: 191px !important
+    width: 191px
 
   .mejs-time-rail span
     display: block
     position: absolute
     height: 12px
     cursor: pointer
-    max-width: 190px !important
+    max-width: 190px
 
   .mejs-controls .mejs-time-rail .mejs-time-total
     +box-shadow(inset rgba(#000, 0.25) 0 1px 1px 0)
