proper jRes breakpoint, plans sass file, minor typo fix.

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -37,13 +37,14 @@
 @import wysiwyg/jquery.wysiwyg
 @import webfonts
 
+
 @media only screen and (min-width: 769px)
   // ----------Style adjustments for viewports over 769px go here
   .mobile
     display: none !important
 
 @media only screen and (max-width: 768px)
-  
+
   // ----------Style adjustments for viewports 768px and under go here
   #main article p
     font-size: 15px
@@ -760,7 +761,7 @@
   #video-series
     article
       background: none !important
-      
+
       #title-bar
       h1,
       .share,
@@ -781,7 +782,7 @@
       li
         background: none !important
         padding-left: 0px !important
-        
+
         a
           img
             display: block
@@ -920,3 +921,4 @@
   @import mobile/webfonts
   @import mobile/donate
   @import mobile/user
+  @import mobile/plans
