Fixin' up reading plans.

--- a/app/assets/stylesheets/mobile/_plans.sass
+++ b/app/assets/stylesheets/mobile/_plans.sass
@@ -1,4 +1,11 @@
 html.mobile
+
+  #sb-devotional
+    margin: 15px
+    ul
+      border: 1px solid #ccc
+      border-top: none
+
   #sb-subscription
     .widget-notice
       display: none
