--- a/app/views/references/_reader_header.html.haml
+++ b/app/views/references/_reader_header.html.haml
@@ -3,7 +3,7 @@
 // reference:
 // alt_version:
 
-.mobile
+#m-toolbar.mobile
   %div.verse_toolbar{class: ('authed' if current_auth)}
     %nav
       %a.submenu_btn.highlight_btn{href: 'javascript:void(0);'}
@@ -43,7 +43,7 @@
           %a.menu_close.highlight_close_btn
         %span.last
 
-.mobile
+#m-navitems.mobile
   %div.nav_items{class: reference.audio ? nil : "audio-disabled"}
     %span.first
     %ul
