--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -48,7 +48,8 @@
         %nav.right_nav
           - if content_for? :mobile_subscription_nav
             = yield :mobile_subscription_nav
-          = yield :mobile_right_nav
+          - else
+            = yield :mobile_right_nav
 
     %form#header_search_form{:action => search_path, method: "GET"}
       %input#header_search_input{:type => 'search', :name => "q", :placeholder => t("search placeholder")}
