--- a/app/views/sidebars/subscriptions/_show.html.haml
+++ b/app/views/sidebars/subscriptions/_show.html.haml
@@ -65,13 +65,15 @@
               = check_box_tag(:completion, nil, ref.completed?, {id:"#{index}_box",onChange: "this.form.submit()"} )
 
             - if content_page == index
-              %span= ref.ref.safe_human
+              %span
+                %b.mobile= t("plans.read today").capitalize
+                = ref.ref.safe_human
             - else
               %a{href: (content_page == index) ? nil : user_subscription_path(current_user, subscription , day: day.to_s, content: (index > 0 ? index.to_s : nil), version: params[:version])}
                 = ref.ref.safe_human
 
 - if reading.devotional
-  .widget
+  #sb-devotional.widget
     %header= t("plans.devotional")
     %ul.widget_menu
       %li
