--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -210,6 +210,7 @@
     display: block !important
 
   #sidebar .widget.subscription header,
+  #sidebar .widget.plan header,
   #sidebar .widget_spacer
     display: none !important
 
