--- a/app/assets/stylesheets/mobile/_plans.sass
+++ b/app/assets/stylesheets/mobile/_plans.sass
@@ -1,5 +1,10 @@
 html.mobile
 
+  #sidebar
+    #action-start.widget
+      padding: 15px
+      margin-bottom: 0
+
   #sb-devotional
     margin: 15px
     ul
