Minor style and redundant title cleanup.

--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -320,7 +320,6 @@ div.close_tab
       float: left
       width: 33.33333333%
       height: 44px
-      background: #2C2B2B
       margin: 0px
       text-align: center
       line-height: 43px
@@ -328,14 +327,14 @@ div.close_tab
       font-weight: bold
       font-size: 15px
       text-decoration: none
-      +box-shadow(inset #000000 0 1px 1px 0px)
-      //+box-shadow(inset #4b4b4b 0 2px 0 0, inset #0d0d0d 0 -2px 0 0)
+      background: #2C2B2B
+      +box-shadow(inset #111 0 1px 2px 2px)
       border-bottom: 1px solid #1f1f1f
     a:first-child
       border-left: 0
     a.selected
       background: #666
-      +box-shadow(inset #000000 0 1px 1px 1px)
+      +box-shadow(inset #666 0 0 0 0)
 
 .tab_navigation.plan_settings,
 .tab_navigation.ref
