--- a/app/assets/stylesheets/mobile/_plans.sass
+++ b/app/assets/stylesheets/mobile/_plans.sass
@@ -12,6 +12,11 @@ html.mobile
       border-top: none
 
   #sb-subscription
+
+    .content_target b
+      display: block
+      margin-bottom: .3em
+
     .widget-notice
       display: none
 
