added beta feedback banner

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,3 +1,9 @@
+.mobile
+  %div#beta-banner
+    %span
+      Mobile Beta
+    %a{:href => 'mailto:en.web@youversion.com?Subject=Mobile%20Beta%20Feedback'}
+      Feedback 
 %header#header{:role => 'banner'}
   - if content_for? :header
     = yield :header
