--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -813,6 +813,35 @@
     padding-right: 0px
     background: none
 
+  #beta-banner
+    overflow: hidden
+    height: 20px
+    padding: 2px 10px 7px
+    background: #81a951
+    background: -moz-linear-gradient(top,  #81a951 0%, #679037 100%)
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#81a951), color-stop(100%,#679037))
+    background: -webkit-linear-gradient(top,  #81a951 0%,#679037 100%)
+    background: -o-linear-gradient(top,  #81a951 0%,#679037 100%)
+    background: -ms-linear-gradient(top,  #81a951 0%,#679037 100%)
+    background: linear-gradient(top,  #81a951 0%,#679037 100%)
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#81a951', endColorstr='#679037',GradientType=0 )
+
+    span
+      display: block
+      float: left
+      color: #fff !important
+      font-weight: bold
+
+    a
+      display: block
+      float: right
+      color: #fff !important
+      font-weight: bold
+      text-decoration: none
+
+    a:hover
+      text-decoration: underline
+
   // ----------------- Single verse page
 
   #header
