Temp. hide the verse share button on mobile

--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -658,3 +658,8 @@ div.close_tab
 
   a.close
     display: none
+
+// KM: temporary HACK to remove the share button for initial launch until 
+// it can be implemented properly
+.verse_toolbar nav a.share_btn
+  display: none
