updated support email

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -2,7 +2,7 @@
   %div#beta-banner
     %span
       Mobile Beta
-    %a{:href => 'mailto:en.web@youversion.com?Subject=Mobile%20Beta%20Feedback'}
+    %a{:href => 'mailto:mobilewebfeedback@youversion.zendesk.com?Subject=Mobile%20Beta%20Feedback'}
       Feedback 
 %header#header{:role => 'banner'}
   - if content_for? :header
