Make sure people can see the downloads page.

--- a/app/views/pages/mobile.html.haml
+++ b/app/views/pages/mobile.html.haml
@@ -1,5 +1,5 @@
 - @sidebar = false
-%article.mobile
+%article
   %section#mobile_content.float_left
     %h2= t('mobile page.h2')
     %section.main
