added video button to mobile footer nav, fixed notes and profile layout issues

--- a/app/assets/stylesheets/mobile/_nav_primary.sass
+++ b/app/assets/stylesheets/mobile/_nav_primary.sass
@@ -70,3 +70,8 @@
   background:
     image: image-url("m_nav_sprite.png")
     position: 12px -554px
+
+#nav_mobile_videos a.icon
+  background:
+    image: image-url("m_nav_sprite.png")
+    position: 12px -609px
