Fixed /mobile desktop styling.

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -463,7 +463,7 @@
 
   // -------------Mobile page
 
-  #main article.mobile
+  #main article.mobileapps
     font-size: 13px
     line-height: 1.7
     background: none
