--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -1,4 +1,4 @@
-// About page
+// ------------------About page
 
 .about_content
   padding-right: 520px
@@ -39,6 +39,8 @@
 .partner h4
   margin-bottom: 0
 
+// ------------------Press page
+
 #main article.press
   ul.press_resources
     list-style: none
@@ -54,14 +56,17 @@
         line-height: 35px
         margin-bottom: 0px
 
-#main article.mobile
+// ------------------ mobile apps page
+
+#main article.mobileapps
   background: image-url("mobile_feature.jpg") top center no-repeat #fff
   padding-top: 350px
   font-size: 13px
   line-height: 1.7
 
-#main article.mobile #mobile_content
-  width: 50%
+  #mobile_content
+    width: 50%
+    float: left
 
 #mobile_content h2
   font-weight: 200
@@ -74,6 +79,7 @@
 
 #mobile_content .multilingual
   width: 40%
+  float: left
 
 .multilingual p
   font-size: 13px
@@ -85,24 +91,32 @@
 
 #mobile_downloads
   width: 40%
-  border-left: 1px #aaa solid
+  border-left: 1px #e1e1e1 solid
   padding: 2% 0 0 3%
+  float: right
 
-#mobile_downloads h3
-  font-size: 15px
+  h3
+    font-size: 15px
 
-#mobile_downloads ul
-  width: 50%
-  list-style: none
+  ul
+    list-style: none
 
-#mobile_downloads ul li
-  background: none
-  padding: 0
-  margin: 10px 0
+    li
+      background: none
+      padding: 0
+      margin: 10px 0
 
-#mobile_downloads ul li a
-  font-weight: bold
-  color: $green
+    li a
+      font-weight: bold
+      color: $green
+
+  .left_column
+    float: left
+    width: 50%
+
+  .right_column
+    width: 50%
+    float: right
 
 #mobile_downloads a.cta
   background: #81a951
@@ -168,7 +182,7 @@ a.cta span
 
 #main section.testimonials h2
   font-size: 18px
-  padding: 15px 0 15px 0
+  padding: 35px 0 15px 0
   font-family: "Helvetica Neue", Helvetica, Sans-serif
 
 #main section.testimonials ul li
@@ -177,7 +191,7 @@ a.cta span
   padding: 5px 20px 10px 55px
   margin: 0
   background: image-url("mobile_quote.png") no-repeat 15px 0px
-  border-right: 1px #bbb solid
+  border-right: 1px #e1e1e1 solid
 
 #main section.testimonials ul li:last-child
   border: 0
