--- a/app/views/pages/mobile.html.haml
+++ b/app/views/pages/mobile.html.haml
@@ -1,22 +1,22 @@
 - @sidebar = false
-%article
-  %section#mobile_content.float_left
+%article.mobileapps
+  %section#mobile_content
     %h2= t('mobile page.h2')
     %section.main
       %p= t('mobile page.main').html_safe
-    %section.multilingual.float_left
+    %section.multilingual
       = image_tag "mobile_multilingual.png"
       %h3= t('mobile page.h3')
       %p= t('mobile page.h3 sub')
-  %section#mobile_downloads.float_right
+  %section#mobile_downloads
     %h3= t('mobile page.download now')
-    %ul.left_column.float_left
+    %ul.left_column
       %li#dl_iphone= link_to t('mobile page.iphone ipad'), "http://itunes.apple.com/app/bible/id282935706"
       %li#dl_android= link_to t('mobile page.android'), "https://market.android.com/details?id=com.sirma.mobile.bible.android"
       %li#dl_blackberry= link_to t('mobile page.blackberry'), "http://appworld.blackberry.com/webstore/content/1222/"
       %li#dl_windows= link_to t('mobile page.windows phone'), "http://windowsphone.com/s?appid=57f524fa-93e3-df11-a844-00237de2db9e"
       %li#dl_windows8= link_to t('mobile page.windows 8'), "http://apps.microsoft.com/webpdp/app/bible/af5f6405-7860-49a9-a6b4-a47381974e1d"
-    %ul.right_column.float_right
+    %ul.right_column
       %li#dl_hppalm= link_to t('mobile page.hp palm'), "https://developer.palm.com/appredirect/?packageid=com.youversion.palm"
       %li#dl_java= link_to t('mobile page.java'), "http://www.getjar.com/mobile/29005/bible-app"
       %li#dl_symbian= link_to t('mobile page.symbian'), "http://www.getjar.com/mobile/29005/bible-app"
