Double background images don't work in IE

--- a/app/assets/stylesheets/_ui_elements.sass
+++ b/app/assets/stylesheets/_ui_elements.sass
@@ -247,7 +247,7 @@
   display: block
   border-radius: 4px
   box-shadow: inset 0px 1px 0px #ddd
-  background: image-url("menu_color_gradient.png") center center no-repeat, image-url("menu_color_picker.png") center center no-repeat
+  background: image-url("menu_color_picker.png") center center no-repeat
 
 .color
   background: image-url("menu_color_gradient.png") center center no-repeat
